2009-07-08  Scott James Remnant  <scott@netsplit.com>

	* util/util.supp: utmpname leaks memory, so suppress it from valgrind

	* util/utmp.c: Set of functions for dealing with utmp and wtmp
	(utmp_read_runlevel): Read the current runlevel from the file
	(utmp_get_runlevel): Obtain the current runlevel from the
	environment, or the file if not set
	(utmp_write_runlevel): Write a runlevel change record, and also
	deal with the reboot record if the utmp or wtmp files don't quite
	match.
	(utmp_write_shutdown): Write a shutdown time record
	(utmp_entry, utmp_write, wtmp_write): utility functions for creating
	and writing utmp and wtmp records.
	* util/utmp.h: Prototypes for new functions.
	* util/tests/test_utmp.c: Test cases.
	* util/Makefile.am (test_utmp_SOURCES, test_utmp_LDFLAGS)
	(test_utmp_LDADD): Details for utmp test cases
	(tests): Move to the bottom of the file and make PHONY

2009-07-07  Scott James Remnant  <scott@netsplit.com>

	* util/man/initctl.8: Improve the manpage.

2009-07-06  Scott James Remnant  <scott@netsplit.com>

	* util/initctl.c: Rewrite from scratch, utilising the current
	D-Bus API and auto-generated method functions for it.
	* util/tests/test_initctl.c: Rewrite from scratch to test all
	of the new methods.
	* util/Makefile.am (test_initctl_CFLAGS): Include AM_CFLAGS
	(install-data-hook, install-exec-hook): Install a symlink for
	"restart" as well.
	* NEWS: Update.

2009-07-03  Scott James Remnant  <scott@netsplit.com>

	* dbus/com.ubuntu.Upstart.Instance.xml (Start, Stop, Restart): add
	wait arguments to the instance commands as well.
	* init/job.c (job_start, job_stop, job_restart): Add wait arguments,
	when TRUE the functions behave as before; when FALSE the methods
	return after changing the goal and no blocked entries are created.
	* init/job.h: Amend prototypes.
	* init/tests/test_job.c (test_start, test_stop, test_restart): 
	Pass TRUE for wait and check for a blocking entry in existing tests,