@@ -1,5 +1,10 @@
 2009-07-08  Scott James Remnant  <scott@netsplit.com>
 
+	* util/utmp.c (utmp_read_runlevel): Don't call utmpxname() if we
+	don't pass a utmp_file, letting glibc pick the default.
+	* util/tests/test_utmp.c (test_read_runlevel): Add a test case for
+	no filename.
+
 	* util/util.supp: utmpname leaks memory, so suppress it from valgrind
 
 	* util/utmp.c: Set of functions for dealing with utmp and wtmp
